custom-css-3.0.css
/* ... */
._0_results_summary_link_to_IA {
    padding: 5px 0 15px 0;
    justify-content: space-evenly;
}
._0_results_summary_link_to_IA a {
    text-decoration: none;
    background-color: var(--button-color);
    padding: 10px;
    border-radius: 10px;
    color: var(--btn-primary-color);
}
.results_summary_text_box:has(#qa_show_more:not(:checked)) .smw::before {
	background: linear-gradient(transparent, var(--primary-25));
}
.ks-tooltip-body {
	background-color: var(--k-tooltip-text);
	color: var(--app-text);
}
.ia-tooltip-body__desc,
.ia-tooltip-body__desc__title {
	color: var(--app-text);
}
.tooltip_base {
	color: var(--k-tooltip-bg);
	background-color: var(--k-tooltip-text);
	box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
	width: 500px;
	z-index: 115;
}
[data-arrow] {
	background-color: var(--k-tooltip-text);
}
.related-items a {
	background-color: var(--primary-25);
	transition: all 0.5s ease;
}
.footer-search-results #load_more_results,
.btn.--primary {
	transition: all 0.5s ease;
}
.ranked-c-adjust-info-icon:not(.new-tooltip) .k-tooltip,
.tooltip-trigger:not(.new-tooltip) .k-tooltip {
	background-color: var(--k-tooltip-text);
	color: var(--app-text);
}
/*.search-form .search-input-container,
.search-form .search-input-container-kids {
	box-shadow: 1px 8px 30px 0 rgba(0, 0, 0, 0.9);
}*/
.paywall-icon .paywall-tooltip {
	color: var(--k-tooltip-bg);
	background-color: var(--k-tooltip-text);
	box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
}
.btn.--secondary-light-s:hover {
	border: 1px solid var(--primary-hover);
	color: var(--primary-hover);
	transition: all 0.5s ease;
}
.inlineHeader {
	transition: all 0.5s ease;
}
.ranked-c-adjust-info-icon:not(.new-tooltip) .k-tooltip:after,
.tooltip-trigger:not(.new-tooltip) .k-tooltip:after {
	border-top: 8px solid var(--secondary);
}
.auto_suggestions_lenses_edit_box:hover {
	background-color: var(--sri-hover-color);
}
.widget-time-ago {
	background-color: var(--button-color);
	color: var(--primary-25);
	user-select: none;
	border-radius: 5px;
	display: inline-block;
	padding: 0 6px;
	margin-bottom: auto;
	margin-top: auto;
}
.scene {
	padding: 1rem;
}
._0_queryInfo {
	display: none;
}
.top_nav_links > a {
	background-color: var(--button-color);
	padding-left: 20px;
	border-radius: 20px;
	color: #232325 !important;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
	transition: all 0.5s ease;
	padding-right: 20px;
	height: 40px;
}
.top_nav_links > a:hover {
	background-color: var(--button-hover-color);
}
#settings_showFiltersPanel:checked ~ .top-panel #top-parent {
	margin-left: 3px;
}
.cheatsh .content {
	background-color: var(--primary-25);
	border-radius: 5px;
}
.cheatsh .cheatsh_content_wrpr::after {
	background-color: var(--primary-25);
}
.cheatsh .code {
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
}
.clear-search {
	margin-right: 10px;
}
.clear-search:hover {
	background-color: var(--kagi-accent);
	border-radius: 5px;
	transition: all 0.5s ease;
}
.mob .clear-search:hover {
	border-radius: 20px;
}
.search-input-container .btn {
	background-color: var(--kagi-accent);
	transition: all 0.5s ease;
}
.search-input-container .btn:hover {
	background-color: var(--button-hover-color);
	transition: all 0.5s ease !important;
}
.mob .search-input-container .btn {
	border-radius: 20px;
}
.search-input-box {
	padding:5px;
}
.sfi_sep {
	display: none;
}
.img_search_state_checkbox_label {
	border-radius: 5px;
	margin-right: 10px;
	margin-left: 0px;
	padding: 7px;
	transition: all 0.5s ease;
}
.img_search_state_checkbox_label:hover {
	background-color: var(--kagi-accent);
	transition: all 0.5s ease !important;
}
#tonav {
	border-bottom: 0 !important;
}

#searchFormSubmit {
    border-radius: 30em;
    margin-right: -13px;
    width: 5em;
    height: 3em;
}
.mob #searchFormSubmit {
    margin-right: -11px;
}
#clear_searchBar {
    height: 3em;
    border-radius: 10em;
    width: 3em;
    margin-right: 5px;
    opacity: 50%;
}
._0_main-search-results {
    margin-top:10px;
}
.m-h .m-h-i {
    height:80px;
    padding:20px;
}
.user-auth-bar {
    margin: 10px;
}
.app-logo.--kagi {
    top:23px;
}

/* KAGI ASSISTANT */

.chat_bubble {
    padding: 30px;
    background-color: var(--primary-25);
    margin: 20px 0;
    border-radius: 15px;
}
.chat_bubble .model {
    margin-bottom: 10px;
}

#chat_box {
    margin-bottom: 50px;
}
#prompt-box {
    flex-grow: unset!important;
    bottom: 0;
    margin-top: auto;
    padding-bottom: calc(8px + env(safe-area-inset-bottom));
    position: sticky;
    z-index: 101;
    background: rgba(4, 4, 5, 0.7);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    border: 1px solid rgba(255,255,255,0.1);
    border-radius: 16px 16px 0 0;
}
.main-center-box>* {
    margin-inline: auto;
    max-width: 812px;
    padding-left: calc(16px + env(safe-area-inset-left));
    padding-right: calc(16px + env(safe-area-inset-right));
    width: 100%;
}
#form {
    padding: 0 30px 20px 30px;
}
.sidebar-box>.tags-pane {
    background: var(--color-search-input);
}
#prompt-box-focus-hint {
    display: none!important;
}

.mob #prompt-box {
    flex-grow: 1;
    background: none;
    border: none;
}
.mob #form {
    background: rgba(4, 4, 5, 0.7);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    border: 1px solid rgba(255,255,255,0.3);
    padding: 5px 10px 10px 10px;
}

@font-face {
    font-family: 'BacktickFix';
    src: local('SF Mono'), local('Menlo'), local('Consolas'), local('DejaVu Sans Mono');
    unicode-range: U+0060;
}
.chat_bubble .content {
    font-family: 'BacktickFix', var(--font-lufga), system-ui;
}

